--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
+    "bootstrap": "^5.3.3",
+    "formik": "^2.4.6",
+    "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.5",
+    "sass": "^1.77.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
